Refactored and improved `BytecodeCompilerTest` and `BytecodeCompiler`
- Simplified `BytecodeCompilerTest` by replacing redundant helper methods with streamlined versions.
- Enhanced readability of test cases through concise assertions and reorganization by categories (arithmetic, control flow, pattern matching, etc.).
- Improved loop handling in `BytecodeCompiler` by adjusting `patchLoopJumps` for cleaner stack behavior.
- Refined short-circuit logic for `AND`/`OR` binary operations with optimizations to avoid unnecessary instructions.
- Ensured match expressions always leave a stack value using `PushNone` for Unit returns from expressions.